Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.15.2
-
Fix Version/s: Qt Creator 6.0.0-beta2
-
Component/s: Project & Build Management
-
Labels:None
-
Platform/s:
-
Commits:15639d00edf5cdc26d8ef2c784219af95ec6b6c5 (qt-creator/qt-creator/6.0)
Description
Qt Creator sometimes Kit's name to Replacement for "hoge" and next time it becomes Replacement for "Replacement for "hoge""
It would be nice if Qt Creator change name ONLY IF name doesn't start with "Replacement for".
Attachments
For Gerrit Dashboard: QTCREATORBUG-26330 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
377544,2 | ProjectExplorer: Prevent cascading "Replacement for" kit names | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |